k8s/temperature_measurement_generator.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temperature-measurement-generator
  labels:
    app: temperature-measurement-generator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: temperature-measurement-generator
  template:
    metadata:
      name: temperature-measurement-generator
      labels:
        app: temperature-measurement-generator
    spec:
      containers:
        - name: temperature-measurement-generator
          image: temperature_measurement_generator
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: measurement-generator-config
              mountPath: /app/config
      restartPolicy: Always
      volumes:
        - name: measurement-generator-config
          configMap:
            name: logback-config
