k8s/kafka-connect.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-connect
  labels:
    app: kafka-connect
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-connect
  template:
    metadata:
      name: kafka-connect
      labels:
        app: kafka-connect
    spec:
      containers:
        - name: kafka-connect
          image: confluentinc/cp-kafka-connect
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
              protocol: TCP
          volumeMounts:
            - name: connector-config
              mountPath: /setup-connector.sh
              subPath: setup-connector.sh
          command: [ "bash", "-c", "--" ]
          args:
            - |
              confluent-hub install --no-prompt --verbose mongodb/kafka-connect-mongodb:latest
              sleep 10
              /etc/confluent/docker/run &
              sleep 30
              /setup-connector.sh
              sleep infinity
      restartPolicy: Always
      securityContext:
        runAsUser: 0
      volumes:
        - name: connector-config
          configMap:
            name: kafka-connect-config
            defaultMode: 0777
            items:
              - key: setup-connector.sh
                path: setup-connector.sh
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-connect
spec:
  selector:
    app: kafka-connect
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
  type: ClusterIP
