k8s/schema-registry.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schema-registry
  labels:
    app: schema-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schema-registry
  template:
    metadata:
      name: schema-registry
      labels:
        app: schema-registry
    spec:
      containers:
        - name: schema-registry
          image: confluentinc/cp-schema-registry:7.7.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
              protocol: TCP
          command:
            - bash
            - -c
            - unset SCHEMA_REGISTRY_PORT; /etc/confluent/docker/run
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: schema-registry
spec:
  selector:
    app: schema-registry
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
