k8s/temperature_anomaly_analyzer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temperature-anomaly-analyzer
  labels:
    app: temperature-anomaly-analyzer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: temperature-anomaly-analyzer
  template:
    metadata:
      name: temperature-anomaly-analyzer
      labels:
        app: temperature-anomaly-analyzer
    spec:
      containers:
        - name: temperature-anomaly-analyzer
          image: temperature_anomaly_analyzer
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
#            - containerPort: 5005
#              protocol: TCP
          volumeMounts:
            - name: anomaly-analyzer-config
              mountPath: /app/config
      restartPolicy: Always
      volumes:
        - name: anomaly-analyzer-config
          configMap:
            name: logback-config
---
apiVersion: v1
kind: Service
metadata:
  name: temperature-anomaly-analyzer
#  Scrape metrics by istio prometheus
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/actuator/prometheus"
    prometheus.io/port: "80"
spec:
  selector:
    app: temperature-anomaly-analyzer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
